--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-cli": "^2.2.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2"
   }
 }
